<resources>
    <string name="app_name">MeLife</string>
    <string name="appname">Me Life</string>
    <string name="Title_Name"> Name (Required)</string>
    <string name="reportuserName"> Name : </string>
    <string name="reportuserAge"> Age : </string>
    <string name="reportuserEdu"> Education : </string>
    <string name="reportusermob"> Mobile : </string>
    <string name="reportuserEmail"> Email : </string>
    <string name="reportuserdot"> Date Of Test : </string>
    <string name="Title_LastName">Last Name </string>
    <string name="Title_Email">Email (Required)</string>
    <string name="Title_mobile">Mobile (Required)</string>
    <string name="Title_pincode">Pincode (Required)</string>
    <string name="Title_signup">Sign Up</string>
    <string name="Title_version">Version 1.0</string>
    <string name="Title_create">Create an Account</string>
    <string name="Title_signin">Sign In</string>
    <string name="Title_forgot">Forgot Password</string>
    <string name="Title_enter_email">Enter Email ID</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="edit">Edit</string>
    <string name="saveprofile">Save Updates</string>
    <string name="networkstring1">Oops! No Internet Connection</string>
    <string name="networkstring2">Make Sure Wifi or cellular data is turned on and try again</string>
    <string name="networkstring3">Try Again</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Location</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_Reports">Profile</string>
    <string name="title_user">User</string>
    <string name="title_logout">LogOut</string>
    <string name="title_welcome">Lets Break The Barriers Together</string>
    <string name="btn_welcome">Get Started</string>
    <string name="title_melife">3G MELIFE</string>
    <string name="login_title">Please Login</string>
    <string name="signup_title">Please Sign Up</string>
    <string name="desc_welcome">MeLife is an Initiative of 3G Institute of Research and Policy Studies.</string>
    <string name="text_psy_test"> Tests</string>
    <string name="text_faq">FAQ </string>
    <string name="text_contactus">Contact Us   </string>
    <string name="text_aboutus">About Us</string>
    <string name="text_setting">Setting </string>
    <string name="text_testreports">Reports </string>
    <string name="title_connect">Connect with us </string>
    <string name="title_testcat">Test Categories </string>
    <string name="instruction">Instructions</string>
    <string name="answera">A. Like extremely </string>
    <string name="answerb">B. Like very much </string>
    <string name="answerc">  C. Neutral </string>
    <string name="answerd"> D. Dislike very much </string>
    <string name="answere">E. Dislike extremely</string>
    <string name="terms"> Agree with the instruction.</string>
    <string name="Title_proceed">Proceed</string>
    <string name="Title_Qn">Question</string>
    <string name="Title_strengh">Natural Strengths</string>
    <string name="Title_weakness">Natural Weaknesses</string>
    <string name="title_nodata">NO DATA AVAILABLE</string>
    <string name="Title_birth">Birth Date</string>
    <string name="Title_next">Next</string>
    <string name="Title_cele">cELeBrAtiONs</string>
    <string name="emailhint">Email&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;(Required)</string>
    <string name="pwdhint">Password&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;(Required)</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="noqn">No Questions Available</string>
    <string name="cont_desc">*We dont end here.Our list of web and app designs and development solutions is broad and extensive.To meet your customised web and app development needs, Contact us.Our representatives will get back to you shortly**We dont end here.Our list of web and app designs and development solutions is broad and extensive.To meet your customised web and app development needs, Contact us.Our representatives will get back to you shortly*</string>
    <string name="test_skill">Skill Finder Test</string>
    <string name="test_skillrep">Skill Finder Test Report</string>
    <string name="test_skill_contact">Contact</string>
    <string name="test_skill_duties">Duties</string>
    <string name="test_skill_intelli">Intelligence</string>
    <string name="test_skill_score">score</string>
    <string name="test_skill_common">Common Charecteristics</string>
    <string name="test_skill_whats">Whats Next?</string>
    <string name="test_skill_multiple">Multiple Intelligence</string>
    <string name="test_skill_suggestedcareer">Suggested Careers</string>
    <string name="test_skill_industries">Industries</string>
    <string name="test_skill_testdesign">Test Design</string>
    <string name="test_skill_disclaimer">Disclaimer</string>
    <string name="test_sright_interest">Graph-Interest Area</string>
    <string name="test_skill_taking">Taking Action</string>
    <string name="test_skill_test_desc">Description</string>
    <string name="test_skill_test_remember">Remember</string>
    <string name="test_skill_test_naturalistic">Naturalistic Intelligence</string>
    <string name="test_skill_test_multileintell_graph">Multiple Intelligence Graph</string>
    <string name="test_skill_test_descriptionintelligence">Description Of Your Types Of Intelligence</string>
    <string name="test_skill_test_public">PUBLIC ADMINISTRATION AND LAW</string>
    <string name="test_skill_test_needs">Suggested career fields based on your interest</string>
    <string name="test_skill_test_suggested">Identify skills based on your Interest</string>
    <string name="test_skill_test_your">Your Interest Areas</string>
    <string name="test_right_per_type">Personality Types</string>
    <string name="test_right_graph">Aptitude Types Graph</string>
    <string name="test_stream_identify">IDENTIFY YOUR RIGHT STREAM</string>
    <string name="test_skill_test_publicdesc">Public administration concerns policy formulation and implementation and management of public affairs by competent civil servants who constitute public services or civil services. Public administration is essential for executing government orders and functions. A whole range of new career opportunities can be taken up in this sector.</string>
    <string name="test_skill_test_brief">Brief Overview Of Interest Areas</string>
    <string name="test_skill_test_what">WHAT IS INTEREST?</string>
    <string name="test_skill_test_publicdetailed">Public administration is the implementation of government policy and also an academic discipline that studies this implementation and prepares civil servants for working in the public service. Public administration concerns policy formulation and implementation and management of public affairs by competent civil servants who constitute public services or civil services. Public administration is essential for executing government orders and functions.The civil service is the backbone of the administrative system of the country. Civil Services of India can be classified into two types - the All India Services and the Central Civil Services (Group A and B). The recruits are university graduates (or above) selected through a rigorous system of examinations, called the Civil Services Examination (CSE) conducted by the Union Public Service Commission (UPSC). Law related careers involve study, development and application of law.

</string>
    <string name="test_skill_test_detailed">Detailed Description of </string>
    <string name="test_skill_test_detailed2"> Suggested Career Fields</string>
    <string name="test_skill_test_descrip">Description Of Your Interest Areas</string>
    <string name="test_skill_test_socialdesc">The person with social interest is classified as helper. Helping jobs involve assisting, teaching, coaching, and serving other people. Helpers like working in cooperative environments to improve the lives of others. A person is classified as a Helper when he or she is mostly interested in jobs that help or serve other people (Social interest). Helpers are typically compassionate, caring people who like to see the impact of their work on others lives. Helpers often choose careers in health care, social service, counseling, human resources and personal care. Helpers like working closely with others in a way that allows you to make a positive impact on their lives. They like enjoy teaching, counseling, and caring for other people. Choosing work that allows you to live out your personal values is very important to you. Most Helpers dislike working alone. They place a high value on their relationships and want to work in cooperation and harmony with others.</string>
    <string name="test_skill_test_whatdesc">Interests refer to an individual’s preference for engaging in one or more speciﬁc activities relative to others. It involves the activities that excites and gives you enjoyment, including what you like to watch, shows you like to attend, and the kind of people you admire and like to be with. Interests reﬂect a person’s preferences, attitudes, values, talents, and qualities. Interest is important in choosing a career because interest keeps you motivated and engaged in your work. Since you spend most of your time during a day and week at the workplace; if you have no interest in what you are doing, it can adversely aﬀect your personal life.</string>
    <string name="test_skill_test_description">Skill ﬁnder test is designed to identify your interests and multiple intelligence. It will help you to ﬁnd the skills already developed in you and to identify the skills to be developed based on your interests. This test report will map out your interest areas and multiple intelligences and provide you with suggestions on which career ﬁeld you can ﬂourish.</string>
    <string name="test_right">Right Career Test Report</string>
    <string name="test_right_pertypes">You are Deliberate +Factual+Gregarious+Imaginative</string>
    <string name="test_right_edu1">1. Education and Training</string>
    <string name="test_aptitude">Aptitude</string>
    <string name="test_detaileddesc">Detailed Description of Suggested Career Fields</string>
    <string name="test_challenge">Challenge</string>
    <string name="test_desc">Description</string>
    <string name="test_title_edu">Education and Training</string>
    <string name="test_suggested">Suggested Career Fields</string>
    <string name="test_brief_carrerfield">Brief Description of Your Career Fields</string>
    <string name="test_personality">Personality</string>
    <string name="test_careermot">CAREER MOTIVATOR</string>
    <string name="test_desc_careermot">Description of Your Top Career Motivators</string>
    <string name="test_desc_topinterest">Description of Your </string>
    <string name="test_desc_topinterest2">Top Interest Areas</string>
    <string name="test_careermot_graph">CAREER MOTIVATORS-GRAPH</string>
    <string name="test_career_some">Some sample answers for “what motivates you at work or course /specific career?</string>
</resources>