<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.ExamFragment">

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/qa_layout"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_40"
        android:layout_height="match_parent">


        <!--        <LinearLayout-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_gravity="left"-->
        <!--            android:layout_weight="0.2">-->
        <!--
          <TextView-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="match_parent"-->
        <!--                android:gravity="center"-->
        <!--                android:textSize="20dp"-->
        <!--                android:textStyle="bold"-->
        <!--                android:textColor="@color/lightblue"-->
        <!--                android:text="@string/Title_Qno"/>-->
        <!--        </LinearLayout>-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="@dimen/dimen_330"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:textSize="@dimen/dimen_15"
                    android:textStyle="bold"
                    android:textColor="@color/darkblue"
                    android:text="@string/Title_Qn"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_20"
                    android:paddingLeft="5dp"
                    android:textSize="@dimen/dimen_15"
                    android:textStyle="bold"
                    android:id="@+id/examTxtQno"
                    android:textColor="@color/darkblue"
                    />
            </LinearLayout>
            <com.github.ybq.android.spinkit.SpinKitView
                android:layout_width="wrap_content"
                android:id="@+id/examSpinKit"
                android:layout_gravity="center_horizontal|center"
                style="@style/SpinKitView.Large.Circle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                android:layout_height="60dp"/>
            <com.codesgood.views.JustifiedTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="@dimen/dimen_17"
                android:typeface="serif"
                android:id="@+id/examTxtQuestion"
                android:textColor="@color/darkblue"
                android:textStyle="bold"
                />

            <com.skydoves.elasticviews.ElasticButton
                style="@style/style_answer_button"
                android:id="@+id/examBtnOption1"
                android:text="@string/answera"/>
            <com.skydoves.elasticviews.ElasticButton
                style="@style/style_answer_button"
                android:id="@+id/examBtnOption2"
                android:text="@string/answerb"/>
            <com.skydoves.elasticviews.ElasticButton
                style="@style/style_answer_button"
                android:id="@+id/examBtnOption3"
                android:text="@string/answerc"/>

            <com.skydoves.elasticviews.ElasticButton
                style="@style/style_answer_button"
                android:id="@+id/examBtnOption4"
                android:text="@string/answerd"/>
            <com.skydoves.elasticviews.ElasticButton
                style="@style/style_answer_button"
                android:id="@+id/examBtnOption5"
                android:text="@string/answere"/>
        </LinearLayout>



    </LinearLayout>



</FrameLayout>