<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/hardwhite"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="@dimen/margin_300"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/network"
            android:layout_height="200dp"/>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/networkstring1"
            android:fontFamily="@font/barlowsemicondensedmedium"
            android:gravity="center"
            android:textSize="15dp"
            android:textColor="@color/questionblack"
            android:textStyle="bold"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/dimen_10"
            android:gravity="center"
            android:textSize="12dp"
            android:textColor="@color/questionblack"
            android:fontFamily="@font/barlowsemicondensedmedium"
            android:text="@string/networkstring2"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="@dimen/margin_200"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/networkstring3"
            android:textColor="@color/hardwhite"
            android:id="@+id/btntryagain2"
            android:background="@drawable/optionbackground"
            android:layout_height="wrap_content"/>
        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_30"/>
    </LinearLayout>
</LinearLayout>