<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.NetworkNotifyActivity">
    <androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:id="@+id/networklayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:src="@drawable/network"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/networkstring1"
                android:fontFamily="@font/barlowsemicondensedmedium"
                android:gravity="center"
                android:textSize="15dp"
                android:textColor="@color/questionblack"
                android:textStyle="bold"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dimen_10"
                android:gravity="center"
                android:textSize="12dp"
                android:textColor="@color/questionblack"
                android:fontFamily="@font/barlowsemicondensedmedium"
                android:text="@string/networkstring2"
                android:layout_height="wrap_content"/>

            <Button
                android:layout_width="@dimen/margin_200"
                android:layout_marginTop="@dimen/margin_20"
                android:text="@string/networkstring3"
                android:textColor="@color/hardwhite"
                android:id="@+id/btntryagain"
                android:background="@drawable/optionbackground"
                android:layout_height="wrap_content"/>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>